--- a/table/2016/2016年7月健身计划记录.md
+++ b/table/2016/2016年7月健身计划记录.md
@@ -4,7 +4,7 @@
     - [x] 10日（3300，20min）
     - [ ] 11日 （LJY）
     - [x] 12日(4000m,25min)
-    - [ ] 24日
+    - [x] 13日(5000m+600,32min)
     - [ ] 25日
     - [ ] 26日
     - [ ] 27日
@@ -17,7 +17,7 @@
     - [ ] 10日(ZJZ、WQC)
     - [x] 11日(3000,22min)
     - [x] 12日(5000m+528m,31m)
-    - [ ] 24日
+    - [ ] 13日(和HX跑玉泉山)
     - [ ] 25日
     - [ ] 26日
     - [ ] 27日
