--- a/table/2016/2016年7月健身计划记录.md
+++ b/table/2016/2016年7月健身计划记录.md
@@ -5,7 +5,7 @@
     - [ ] 11日 （LJY）
     - [x] 12日(4000m,25min)
     - [x] 13日(5000m+600,32min)
-    - [ ] 25日
+    - [x] 14日(5500m+500,31min)
     - [ ] 26日
     - [ ] 27日
     - [ ] 28日
@@ -18,7 +18,7 @@
     - [x] 11日(3000,22min)
     - [x] 12日(5000m+528m,31m)
     - [ ] 13日(和HX跑玉泉山)
-    - [ ] 25日
+    - [x] 14日(3000m,20min)
     - [ ] 26日
     - [ ] 27日
     - [ ] 28日
