--- a/table/2016/2016年7月健身计划记录.md
+++ b/table/2016/2016年7月健身计划记录.md
@@ -6,7 +6,7 @@
     - [x] 12日(4000m,25min)
     - [x] 13日(5000m+600,32min)
     - [x] 14日(5500m+500,31min)
-    - [ ] 26日
+    - [x] 15日(6000+200m,36min,2min30s)
     - [ ] 27日
     - [ ] 28日
     - [ ] 29日
@@ -19,7 +19,7 @@
     - [x] 12日(5000m+528m,31m)
     - [ ] 13日(和HX跑玉泉山)
     - [x] 14日(3000m,20min)
-    - [ ] 26日
+    - [x] 15日(5000m+200,32min,1min40s)
     - [ ] 27日
     - [ ] 28日
     - [ ] 29日
