--- a/table/2016/2016年7月健身计划记录.md
+++ b/table/2016/2016年7月健身计划记录.md
@@ -7,7 +7,7 @@
     - [x] 13日(5000m+600,32min)
     - [x] 14日(5500m+500,31min)
     - [x] 15日(6000+200m,36min,2min30s)
-    - [ ] 27日
+    - [ ] 16日(参加丘赛)
     - [ ] 28日
     - [ ] 29日
     - [ ] 30日
@@ -20,7 +20,7 @@
     - [ ] 13日(和HX跑玉泉山)
     - [x] 14日(3000m,20min)
     - [x] 15日(5000m+200,32min,1min40s)
-    - [ ] 27日
+    - [x] 16日(5000m+398m,32min,1min50s)
     - [ ] 28日
     - [ ] 29日
     - [ ] 30日
