--- a/table/2016/2016年7月健身计划记录.md
+++ b/table/2016/2016年7月健身计划记录.md
@@ -8,7 +8,7 @@
     - [x] 14日(5500m+500,31min)
     - [x] 15日(6000+200m,36min,2min30s)
     - [ ] 16日(参加丘赛)
-    - [ ] 28日
+    - [x] 17日(6000+300m,32min,1min40s)
     - [ ] 29日
     - [ ] 30日
     - [ ] 剩下的日子
