--- a/健身方式.md
+++ b/健身方式.md
@@ -2,8 +2,6 @@
 
 标签（空格分隔）：everyday body-build heathy run 
 
-
-
 项目|签到
 :---------------|:---------------
 跑步机|√|
@@ -22,7 +20,11 @@
 旋转|√|
 斜着|√|
 
+#杠铃
+小的十几个，大的6-8个
 
+#练胸机器
+可以多做几个！
 
 
 
