--- a/健身方式.md
+++ b/健身方式.md
@@ -1,5 +1,7 @@
 ﻿# 健身方式
 
+效率要高，休息要少！
+
 标签（空格分隔）：everyday body-build heathy run 
 
 项目|签到
@@ -26,7 +28,15 @@
 #练胸机器
 可以多做几个！
 
-
-
+#垫上运动
+项目|签到
+:--------------|:----------------
+伸手|√|
+风车|√|
+抬脚（慢动作）|√|
+左右碰脚|√|
+左右抓脚|√|
+放开手|√|
+左右开弓|√|
 
 
