--- a/table/2016/2016年7月健身计划记录.md
+++ b/table/2016/2016年7月健身计划记录.md
@@ -9,7 +9,7 @@
     - [x] 15日(6000+200m,36min,2min30s)
     - [ ] 16日(参加丘赛)
     - [x] 17日(6000+300m,32min,1min40s)
-    - [ ] 29日
+    - [x] 18日(6000m,38min,2min30s)
     - [ ] 30日
     - [ ] 剩下的日子
 - [ ] 晚上健身（0.5hour）
@@ -22,6 +22,6 @@
     - [x] 15日(5000m+200,32min,1min40s)
     - [x] 16日(5000m+398m,32min,1min50s)
     - [ ] 17日(丘赛：应用)
-    - [ ] 29日
+    - [x] 18日(6000m,32min,2min30s)
     - [ ] 30日
     - [ ] 剩下的日子
