--- a/table/2016/2016年7月健身计划记录.md
+++ b/table/2016/2016年7月健身计划记录.md
@@ -10,7 +10,7 @@
     - [ ] 16日(参加丘赛)
     - [x] 17日(6000+300m,32min,1min40s)
     - [x] 18日(6000m,38min,2min30s)
-    - [ ] 30日
+    - [ ] 19日(CAS)
     - [ ] 剩下的日子
 - [ ] 晚上健身（0.5hour）
     - [x] 9日(3000m,20min）
@@ -23,5 +23,5 @@
     - [x] 16日(5000m+398m,32min,1min50s)
     - [ ] 17日(丘赛：应用)
     - [x] 18日(6000m,32min,2min30s)
-    - [ ] 30日
+    - [x] 19日(5298m,36min)
     - [ ] 剩下的日子
