--- a/table/2016/2016年7月健身计划记录.md
+++ b/table/2016/2016年7月健身计划记录.md
@@ -11,7 +11,7 @@
     - [x] 17日(6000+300m,32min,1min40s)
     - [x] 18日(6000m,38min,2min30s)
     - [ ] 19日(CAS)
-    - [ ] 剩下的日子
+
 - [ ] 晚上健身（0.5hour）
     - [x] 9日(3000m,20min）
     - [ ] 10日(ZJZ、WQC)
@@ -25,3 +25,4 @@
     - [x] 18日(6000m,32min,2min30s)
     - [x] 19日(5298m,36min)
     - [x] 21日(10000m)
+    - [x] 28日(swim:1000m)
